# vidflow

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/vidflow/: capture.py  cli.py  cli_common.py  completion.py  models_config.py  transcribe.py  youtube.py
src/vidflow/capture/: __init__.py  cli.py  completion.py  config.py  core.py  frames.py  local.py  markdown.py  metadata.py  titling.py  transcript.py  utils.py  video.py
src/vidflow/capture/data/: vidcapture.bash  ytcapture.bash
src/vidflow/data/: completion.bash
src/vidflow/transcribe/: __init__.py  cli.py  image.py  models.py  output.py  parser.py  processor.py  prompts.py
tests/: test_cli.py  test_clipboard.py  test_titling.py  test_video_id.py
